web/wp-content/themes/cncf-twenty-two/source/scss/core/_header.scss
/* ... */
@media (min-width: 1000px) {
	.header {
		background-color: rgba($gray-050, 0.98);
		.wp-block-button__link {
			padding-top: 6px;
			padding-bottom: 6px;
			margin-left: 20px;
			min-width: 120px;
			flex-shrink: 0;
			border-radius: 4px;
			width: min-content;
			@media (min-width: 1250px) {
				min-width: 134px;
				margin-left: 52px;
			}
		}
		.header-cta .wp-block-button__link {
			text-transform: capitalize;
		}

		.search-toggle.button-reset {
			margin-left: 20px;
			height: 30px;
			width: 30px;
			@media (min-width: 1250px) {
				margin-left: 40px;
			}
		}

		&__search_wrapper {
			opacity: 0;
			visibility: hidden;
			position: absolute;
			z-index: 2;
			top: 100%;
			left: 0;
			right: 0;
			background-color: rgba(#222222, 0.85);
			transition: opacity 0.15s ease-in;
			&.is-active {
				opacity: 0.85;
				visibility: visible;
				transition: opacity 0.15s ease-in;
			}
		}

		&__search_container {
			// replicate container.
			width: 100%;
			max-width: $content-width;
			margin: auto;
			// replicate wrap.
			padding-left: 25px;
			padding-right: 25px;
			@media (min-width: 1250px) {
				padding-left: 0px;
				padding-right: 0px;
			}
			height: 80px;
			display: flex;
			width: 100%;
			align-items: center;
			justify-content: flex-end;
		}
	}

	.main-menu {
		display: flex;
		align-items: center;
		width: 100%;
		&__wrapper {
			display: flex;
			margin-right: auto;
		}
	}

	.menu-item-has-children {
		> a {
			white-space: nowrap;
			padding-bottom: 33px;
			padding-top: 33px;
			padding-left: 8px;
			padding-right: 8px;
			@media (min-width: 1250px) {
				padding-left: 20px;
				padding-right: 20px;
			}
		}
		> a span {
			position: relative;
			padding-left: 6px;
			padding-right: 6px;
			&:after {
				content: '';
				position: absolute;
				left: 0;
				right: 0;
				bottom: -33px;
				height: 5px;
				display: block;
				width: 100%;
				background-color: transparent;
			}
		}
		&:nth-child(1).is-open span:after {
			background-color: $shade-01;
		}
		&:nth-child(2).is-open span:after {
			background-color: $shade-02;
		}
		&:nth-child(3).is-open span:after {
			background-color: $shade-03;
		}
		&:nth-child(4).is-open span:after {
			background-color: $shade-04;
		}
		&:nth-child(5).is-open span:after {
			background-color: $shade-05;
		}

		// pop out menu.
		.sub-menu {
			// position.
			width: 100%;
			position: absolute;
			left: 0;
			right: 0;
			top: 100%;
			z-index: 3;
			// visiblity.
			opacity: 0;
			visibility: hidden;
			overflow: hidden;

			// style.
			background-color: $white;
			// fake shadow inside menu.
			&:before {
				content: '';
				position: absolute;
				top: 0;
				width: 100%;
				height: 20px;
				z-index: 4;
				background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
			}
			&:after {
				content: '';
				top: 100%;
				position: absolute;
				width: 100%;
				height: 10px;
				z-index: 3;
				background: linear-gradient(180deg, rgba(0, 0, 0, 0.1) 0%, rgba(0, 0, 0, 0) 100%);
			}
		}

		// activate pop-out menu, with is-open class or with focus.
		&.is-open > .sub-menu,
		&:focus > .sub-menu,
		&:focus-within > .sub-menu {
			opacity: 1;
			visibility: visible;
			overflow: visible;
			> .col-container {
				opacity: 1;
				visibility: visible;
				transition: all 1s ease-out;
				@media (prefers-reduced-motion: reduce) {
					transition: none;
				}
			}
		}
	}

	.col-container {
		// replicate container.
		width: 100%;
		max-width: $content-width;
		margin: auto;
		// replicate wrap.
		padding-left: 25px;
		padding-right: 25px;
		@media (min-width: 1250px) {
			padding-left: 0px;
			padding-right: 0px;
		}
		// replicate grid.
		display: grid;
		grid-template-columns: repeat(24, 1fr);
		grid-column-gap: calc($grid-column-gap / 2);
		grid-row-gap: $grid-row-gap;

		opacity: 0;
		visibility: hidden;
		transition: opacity 0.75s ease;
		@media (prefers-reduced-motion: reduce) {
			transition: none;
		}

		.col1 {
			grid-column: span 8;
			padding-right: 50px;
			padding-bottom: 50px;
		}

		.col2 {
			grid-column: span 7;
			padding-right: 40px;
			padding-bottom: 50px;
		}

		.col3 {
			padding-bottom: 50px;
			grid-column: span 9;
			border-left: 1px solid $gray-400;
			background-color: $white;
			background: linear-gradient(90deg, rgba(252, 252, 252, 1) 25%, rgba(255, 255, 255, 0) 100%);
			padding-left: 30px;
			li {
				line-height: unset;
			}
		}
	}
}

// Item box used only in mega menu.
.main-menu-item {
	background: $white;
	border: 1px solid $gray-400;
	border-radius: 5px;
	display: flex;
	flex-direction: row;
	font-weight: 700;
	padding: 7px 7px;
	font-family: $font-primary;
	&__image-wrapper {
		width: 194px;
		height: 102px;
		flex-shrink: 0;
	}
	&__link {
		display: block;
	}
	&__image {
		display: block;
		height: 102px;
		width: 100%;
		object-fit: cover;
		border-radius: 3px;
	}
	&__text-wrapper {
		padding-left: 20px;
		padding-right: 10px;
		display: flex;
		flex-direction: column;
		.author-category {
			margin-top: 5px;
			margin-bottom: 5px;
		}
	}
	&__title {
		margin-top: 5px;
		margin-bottom: 8px;
		// experimental line restriction.
		display: -webkit-box;
		-webkit-line-clamp: 3;
		-webkit-box-orient: vertical;
		overflow: hidden;
		line-height: 115%;

		a {
			color: $black;
			font-size: 11px;
		}
	}
	&__date {
		display: block;
		font-size: 8px;
		line-height: 8px;
		letter-spacing: 0.05em;
		color: $gray-700;
		margin-top: auto;
		margin-bottom: 5px;
	}
}
/* ... */

